date/temp spacing resolved

--- a/src/App.css
+++ b/src/App.css
@@ -162,7 +162,7 @@ img {
     position: absolute;
     top: 45%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -45%);
 }
 
 .extras {
